# intelligence-layer-sdk

./: .darglint2  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Concepts.md  LICENSE.md  README.md  RELEASE.md  docker-compose.yaml  env.sample  mypy.ini  pyproject.toml  pytest.ini  run.py  sandbox.ipynb  setup.py  style_guide.md  styleguide.md  update_requirements.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/composites/: get_jfrog_access_token.sh  get_jfrog_access_token_subject.sh  python-setup.yml
.github/composites/python-setup/: action.yml
.github/workflows/: artifactory.yml  daily.yml  doctest.yml  document-index-execution.yml  document-index-tests.yml  document-index.yml  documentation.yml  frontend.yml  github-actions.yml  lint-and-test.yml  lint.yml  on-push.yml  run_notebooks.yml  sdk-tests.yml  test-execution.yml  test.yml
docs/: Makefile  conf.py  index.rst  intelligence_layer.connectors.rst  intelligence_layer.core.rst  intelligence_layer.evaluation.rst  intelligence_layer.examples.rst  intelligence_layer.rst  intelligence_layer.use_cases.rst
log-viewer/: .eslintignore  .eslintrc.cjs  Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
log-viewer/.storybook/: main.ts  preview.ts
log-viewer/src/: app.css
log-viewer/src/lib/: active.ts  log.test.ts  log.test_utils.ts  log.ts  logfile.parser.test.ts  logfile.parser.ts
log-viewer/src/routes/: +page.svelte
log-viewer/src/stories/: Button.stories.ts  Button.svelte  Configure.mdx  Header.stories.ts  Header.svelte  Page.stories.ts  Page.svelte
log-viewer/tests/: qa_example.json  test.ts
requirements/: base.in  base.txt  test.txt
scripts/: all.sh  clean_hf.py  doctest.sh  fastapi_example_test.sh  lint.sh  load_env.sh  notebook_runner.sh  notebook_runner_document_index.sh  precommit-and-mypy-and-pytest.sh  test.sh
src/documentation/: attention_manipulation_with_text_controls.ipynb  classification.ipynb  document_index.ipynb  elo_qa_eval.ipynb  evaluate_with_studio.ipynb  evaluation.ipynb  fastapi_example.py  fastapi_tutorial.ipynb  human_evaluation.ipynb  parameter_optimization.ipynb  performance_tips.ipynb  qa.ipynb  quickstart_task.ipynb  summarization.ipynb  test_span_upload.ipynb
src/documentation/data/: classify_examples.json  classify_examples_multilabel.json
src/documentation/how_tos/: example_data.py  how_to_aggregate_evaluations.ipynb  how_to_compare_tasks.ipynb  how_to_create_a_dataset.ipynb  how_to_create_a_dataset_using_studio.ipynb  (+16 more)
src/examples/: classification.ipynb  classify.ipynb  classify.nbconvert.ipynb  document_index.ipynb  embedding_based_classify.ipynb  evaluation.ipynb  fastapi_example.py  fastapi_tutorial.md  human_eval.ipynb  human_evaluation.ipynb  issue_classification_user_journey.ipynb  performance_tips.ipynb  qa.ipynb  qa.nbconvert.ipynb  quickstart_task.ipynb  single_label_classify.ipynb  summarization.ipynb  summarize.ipynb  test.ipynb  user_journey.ipynb  wandb_evaluation.ipynb
src/intelligence_layer/: _output.py  _task.py  available_models.py  avalible_models.py  classify.ipynb  classify.py  completion.py  diy_task.ipynb  echo.py  grading.py  highlight.py  long_context_qa.py  multiple_chunk_qa.ipynb  multiple_chunk_qa.py  multiple_document_qa.ipynb  multiple_document_qa.py  prompt_template.py  qa.ipynb  qa.py  qa_v2.ipynb  quickstart_task.ipynb  retriever_based_qa.py  search.py  single_chunk_qa.ipynb  single_chunk_qa.py  single_label_classify.py  summarize.ipynb  summarize.py  task.py  text_highlight.py  tree_visualizer.py
tests/: conftest.py  conftest_document_index.py  docker-compose.yaml  test_classify.py  test_completion.py  test_debug_log.py  test_echo.py  test_fastapi.py  test_in_memory_retriever.py  test_logger.py  test_long_context_qa.py  test_multiple_chunk_qa.py  test_multiple_document_qa.py  test_prompt_template.py  test_qa.py  test_retriever_based_qa.py  test_search.py  test_single_chunk_qa.py  test_single_label_classify.py  test_summarize.py  test_task.py  test_text_highlight.py
tests/connectors/: test_limited_concurrency_client.py
tests/core/: test_chunk.py  test_complete.py  test_debug_log.py  test_detect_language.py  test_echo.py  test_evaluator.py  test_file_tracer.py  test_intelligence_app.py  test_logger.py  test_model.py  test_prompt_template.py  test_safety_classifier.py  test_task.py  test_temp.py  test_text_highlight.py  test_tracer.py
tests/evaluation/: conftest.py  test_accumulator.py  test_aggregation_repository.py  test_argilla_evaluation_repository.py  test_argilla_evaluator.py  test_async_evaluation_repository.py  test_build_tournaments.py  test_data_platform_dataset_repository.py  test_dataset_repository.py  test_diff_evaluator.py  test_domain.py  test_elo.py  test_elo_calculator.py  test_elo_evaluation_logic.py  test_elo_evaluator.py  test_evaluation_repository.py  test_evaluator.py  test_file_dataset_repository.py  test_file_evaluation_repository.py  test_graders.py  test_hugging_face.py  test_hugging_face_aggregation_repository.py  test_hugging_face_dataset_repository.py  test_hugging_face_repository.py  test_incremental_evaluator.py  test_instruct_comparison_argilla_evaluator.py  test_repository_navigator.py  test_run.py  test_run_repository.py  test_runner.py  test_single_huggingface_dataset_repository.py
tests/learning/: conftest.py  test_file_instruction_finetuning_data_repository.py  test_instruction_finetuning_data_handler.py  test_postgres_instruction_finetuning_data_repository.py
tests/retrievers/: test_document_index.py  test_in_memory.py  test_qdrant_in_memory.py
tests/use_cases/: test_intelligence_starter_app.py
trace-viewer/: .gitignore  .prettierrc  CHANGELOG.md  Dockerfile  README.md  env.sample  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.js  vite.config.js.map
trace-viewer/.storybook/: preview.ts
trace-viewer/src/: app.d.ts  app.html
trace-viewer/tests/: test.ts
(+420 files in other folders)
