[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "intelligence-layer"
version = "12.0.0"
description = ""
authors = ["Aleph Alpha Engineering <engineering@aleph-alpha.com>"]
readme = "README.md"
license = "Aleph Alpha Licensed"
packages = [{ include = "intelligence_layer", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "2.11.*"
aleph-alpha-client = ">=7.1.0"
python-dotenv = "*"
semantic-text-splitter = "^0.26.0"
qdrant-client = { version = "1.13.3", extras = ["fastembed"] }
rich = "^14.0.0"
datasets = "^3.6.0"
requests = "^2.32.3"
pycountry = "24.6.1"
opentelemetry-api = "^1.29.0"
opentelemetry-sdk = "^1.29.0"
huggingface-hub = "^0.32.1"
opentelemetry-exporter-otlp-proto-http = "1.29.0"
# summary grader
rouge-score = "^0.1.2"
sacrebleu = "^2.5.1"
lingua-language-detector = "^2.1.0"
argilla = "^2.8.0"
dict-hash = "^1.3.6"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.9"
aiohttp = "^3.11.18"
python-liquid = "^1.13.0"

[tool.poetry.group.dev.dependencies]
# lint & format
mypy = "^1.15.0"
nbqa = "^1.9.1"
ruff = "^0.11.11"
pre-commit = "^4.2.0"

# tests
pytest = "^8.3"
pytest-xdist = "^3.6.1"
nbconvert = "^7.16.6"

# typing
httpx = "*"
types-Pygments = "*"
types-colorama = "*"
types-docutils = "*"
types-setuptools = "*"
types-decorator = "*"
types-requests = "*"
types-tqdm = "*"
pandas-stubs = "^2.2.3.250527"

# docs
sphinx-rtd-theme = "^3.0.2"
sphinx = "^8.1.3"
matplotlib = "^3.10.3"
pytest-asyncio = "^0.26.0"

[tool.poetry.group.docs.dependencies]
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
hypercorn = "^0.17.3"
jupyter = "^1.1.1"

# [tool.poetry.extras]
# argilla = ["argilla"]
# grader = ["rouge-score", "sacrebleu"]
# language-detection = ["lingua-language-detector", "pycountry"]


[tool.poetry.group.extras.dependencies]
pytest = "^8.3.5"
asyncio = "^3.4.3"

[tool.mypy]
files = "src,tests"
strict = "True"

[tool.pytest.ini_options]
verbosity_assertions = 1
markers = [
    "internal: marks tests as internal (deselect with '-k \"not internal\"')",
    "docker: the test depends on having a docker container running.",
    "document_index: tests for the document index client and the async document index client",
]
addopts = "--capture=tee-sys"
filterwarnings = [ #ignore: message : warning : location ?
    'ignore:.*\`general_plain_validator_function\` is deprecated.*',
    'ignore::DeprecationWarning:.*importlib._bootstrap.*',
]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# defaults: ["E4", "E7", "E9", "F"]
# check https://docs.astral.sh/ruff/rules/ for more info
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "W",
    # isort
    "I",
    # simplify
    "SIM",
    # pathlib, small but may be nice
    "PTH",
    # update to newer python versions (mostly typing)
    "UP",
    # ruff dependent checks
    "RUF",
    # bugbear
    "B",
    # pydocstring
    "D",


]
# Did not seem so useful: PD, T20(not yet), C90(eventually), PT (too opinionated)
ignore = [
    # Line too long
    "E501",
    # X | Y for hinting over optional
    "UP007",
    # next() instead of [0],
    "RUF015",
    # unusual unicodes
    "RUF001",
    # warnings should be self explanatory
    "B028",
    # we do not docstring everything
    "D1",
]
extend-safe-fixes = ["D415"]

[tool.ruff.lint.isort]
known-first-party = ["intelligence_layer", "documentation"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pydoclint]
style = 'google'
exclude = '\.git|tests'
quiet = true
require-return-section-when-returning-nothing = false
check-return-types = false
require-yield-section-when-yielding-nothing = false
check-yield-types = false
arg-type-hints-in-docstring = false
allow-init-docstring = true
skip-checking-raises = true
# this does not work well with type definitions in class attributes
check-class-attributes = false
